--- a/client.html
+++ b/client.html
@@ -1,5 +1,3 @@
-<!-- No need to change the pre-written code.
-Implement the features inside the script tag -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -11,7 +9,7 @@ Implement the features inside the script tag -->
 
 <body>
     <div id="login-container">
-        <!-- form to enter username and room ID -->
+        <!-- Create a form to enter username and room ID -->
         <form id="login-form">
             <input type="text" id="username-input" placeholder="Enter your username" required>
             <input type="text" id="room-input" placeholder="Enter room ID" required>
@@ -20,15 +18,15 @@ Implement the features inside the script tag -->
     </div>
 
     <div id="chat-container">
-        <!-- message display area -->
+        <!-- Create a message display area -->
         <div id="message-display">
             <!-- Messages will be appended here -->
         </div>
 
-        <!-- form to send messages -->
+        <!-- Create a form to send messages -->
         <form id="message-form">
             <input type="text" id="message-input" placeholder="Type your message" required>
-            <button type="submit" id="send-message">Send</button>
+            <button type="submit">Send</button>
         </form>
     </div>
 
@@ -36,7 +34,6 @@ Implement the features inside the script tag -->
     <script>
         const socket = io.connect('http://localhost:3000');
 
-        // ----------------- Write your code here ---------------
         const loginContainer = document.getElementById('login-container');
         const chatContainer = document.getElementById('chat-container');
         const messageForm = document.getElementById('message-form');
@@ -77,7 +74,6 @@ Implement the features inside the script tag -->
             messageElement.innerHTML = `<strong>${message.username ? message.username + ":": ""}</strong> ${message.text}`;
             messageDisplay.appendChild(messageElement);
         });
-
     </script>
 
 
