--- a/client.html
+++ b/client.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Chat-Room App</title>
-    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -49,7 +48,7 @@
             // Get the username and room from the form
             username = document.getElementById('username-input').value;
             room = document.getElementById('room-input').value;
-            
+
             // Hide the login container and show the chat container
             loginContainer.style.display = 'none';
             chatContainer.style.display = 'block';
@@ -69,10 +68,23 @@
 
         // Listen for incoming messages from the server
         socket.on('message', (message) => {
+            console.log(message)
             // Display the received message in the message display area
             const messageElement = document.createElement('div');
-            messageElement.innerHTML = `<strong>${message.username ? message.username + ":": ""}</strong> ${message.text}`;
+            messageElement.innerHTML = `<strong>${message.username ? message.username + ":" : ""}</strong> ${message.text}`;
             messageDisplay.appendChild(messageElement);
+        });
+        
+        // Listen for previous messages from the server
+        socket.on('previousMessages', (previousMessages) => {
+            // Display the previous messages in the message display area
+            // write your code here
+            console.log(previousMessages);
+            previousMessages.forEach(message => {
+                const messageElement = document.createElement('div');
+                messageElement.innerHTML = `${new Date(message.timestamp).toDateString()} <strong>${message.username ? message.username + ":" : ""}</strong> ${message.text}`;
+                messageDisplay.appendChild(messageElement);
+            });
         });
     </script>
 
